2025-09-27T00:49:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18052661284 # 779
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-27
* notice: last 14d: unq all: 7 15
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1033 / 654 1048
* notice: next accum: outdated-unq outdated-all / unq all: 640 1034 / 655 1049
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-12] / [2025-09-26]

2025-09-26T00:51:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18024623098 # 778
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-26
* notice: last 14d: unq all: 7 15
* notice: prev accum: outdated-unq outdated-all / unq all: 638 1032 / 653 1047
* notice: next accum: outdated-unq outdated-all / unq all: 639 1033 / 654 1048
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-11] / [2025-09-25]

2025-09-25T00:52:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17993588307 # 777
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-25
* notice: last 14d: unq all: 7 15
* notice: prev accum: outdated-unq outdated-all / unq all: 637 1031 / 652 1046
* notice: next accum: outdated-unq outdated-all / unq all: 638 1032 / 653 1047
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-10] / [2025-09-24]

2025-09-24T00:51:54Z: