@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-27T00:49:41Z",
+  "timestamp" : "2025-09-28T00:57:19Z",
   "count_outdated" : 1034,
   "uniques_outdated" : 640,
-  "count" : 1049,
-  "uniques" : 655,
+  "count" : 1050,
+  "uniques" : 656,
   "clones" : [
     {
       "timestamp": "2025-09-14T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-09-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
