@@ -1,3 +1,12 @@
+2025-09-28T00:57:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18067130822 # 780
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-28
+* notice: last 14d: unq all: 7 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 640 1034 / 655 1049
+* notice: next accum: outdated-unq outdated-all / unq all: 640 1034 / 656 1050
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-09-27]
+
 2025-09-27T00:49:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18052661284 # 779
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-27
